# amber_developer_stack

./: README.md
alt_math_utilities/: CMakeLists.txt  README.yaml  package.xml
alt_math_utilities/include/alt_math_utilities/: PowFast.hpp
alt_math_utilities/src/: PowFast.cpp
alt_math_utilities/test/: test_powfast.cpp
amber_developer_stack/: CMakeLists.txt  package.xml
common_assert/: CMakeLists.txt  package.xml
common_assert/include/common_assert/: common_assert.hpp
common_assert/test/: test_common_assert.cpp
common_cmake/: CMakeLists.txt  package.xml
common_cmake/cmake/: common_cmake-setup.cmake  common_flags.cmake
common_cmake_test/: CMakeLists.txt  README.md  package.xml
common_cmake_test/scripts/: quick_test.sh
common_scripts/: CMakeLists.txt  README.md  package.xml  setup.py
common_scripts/env-hooks/: common_scripts-setup.bash.develspace.in
common_scripts/scripts/: catkin_rename_package.sh  regex_rename.py  regex_sub.py  rossudo
common_scripts/src/common_scripts/: text_processor.py
common_scripts/src/common_scripts/third/: pyratemp.py
common_scripts/test/: nav2d_msgs.patch  test_catkin_package_rename.sh
control_eigen_utilities/: CMakeLists.txt  package.xml
control_eigen_utilities/include/control_eigen_utilities/: limits.hpp
control_eigen_utilities/test/: test_control_eigen_utilities.cpp
control_utilities/: CMakeLists.txt  package.xml
control_utilities/include/control_utilities/: filters.hpp  limits.hpp
control_utilities/test/: test_control_utilities.cpp
eigen_utilities/: CMakeLists.txt  README.md  package.xml
eigen_utilities/include/eigen_utilities/: assert_error.hpp  assert_size.hpp  compare_utilities.hpp  container_utilities.hpp  interp_utilities.hpp  operator_utilities.hpp  runtime_config.hpp  types.hpp
eigen_utilities/scripts/: run_tests.sh
eigen_utilities/share/: results.yaml
eigen_utilities/test/: test_assert_size.cpp  test_compare_utilities.cpp  test_container_utilities.cpp  test_interp_utilities.cpp  test_operator_utilities.cpp  test_runtime_config.cpp  test_runtime_config_clean_eigen.cpp  test_runtime_config_ndebug.cpp
gdb_utilities/: package.xml
logging_utilities/: CMakeLists.txt  package.xml
logging_utilities/scripts/: plotter.py  rosbag-to-matlab-full.py  rosbag_example.sh  yaml-to-matlab.py
qpoases_ros/: CMakeLists.txt  package.xml
realtime_utilities/: CMakeLists.txt  package.xml
realtime_utilities/include/realtime_utilities/: timing.hpp
realtime_utilities/src/: timing.cpp
realtime_utilities/test/: test_timing.cpp
ros_utilities/: CMakeLists.txt  package.xml
ros_utilities/include/ros_utilities/: ros_utilities.hpp  throttle_action.hpp  timing.hpp
roslib_utilities/: CMakeLists.txt  package.xml
roslib_utilities/include/roslib_utilities/: ros_package_utilities.hpp
roslib_utilities/src/: ros_package_utilities.cpp
roslib_utilities/src/roslib_utilities/: ros_package_utilities.py
roslib_utilities/test/: roslib_utilities-test.cpp
stl_utilities/: CMakeLists.txt  package.xml
stl_utilities/include/stl_utilities/: container_utilities.hpp
stl_utilities/test/: test_container_utilities.cpp
yaml_cpp_0_2_7/: CMakeLists.txt  install.txt  package.xml  yaml-cpp-0.2.7.pc.cmake
yaml_cpp_0_2_7/include/yaml-cpp-0.2.7/: aliasmanager.h  anchor.h  conversion.h  dll.h  emitfromevents.h  emitter.h  emittermanip.h  eventhandler.h  exceptions.h  iterator.h  ltnode.h  mark.h  node.h  nodeimpl.h  nodereadimpl.h  nodeutil.h  noncopyable.h  null.h  ostream.h  parser.h  stlemitter.h  stlnode.h  traits.h  yaml.h
yaml_cpp_0_2_7/include/yaml-cpp-0.2.7/contrib/: anchordict.h  graphbuilder.h
yaml_cpp_0_2_7/src/: aliasmanager.cpp  collectionstack.h  conversion.cpp  directives.cpp  directives.h  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exp.cpp  exp.h  indentation.h  iterator.cpp  iterpriv.h  node.cpp  nodebuilder.cpp  nodebuilder.h  nodeownership.cpp  nodeownership.h  null.cpp  ostream.cpp  parser.cpp  ptr_stack.h  ptr_vector.h  regex.cpp  regex.h  regeximpl.h  scanner.cpp  scanner.h  scanscalar.cpp  scanscalar.h  scantag.cpp  scantag.h  scantoken.cpp  setting.h  simplekey.cpp  singledocparser.cpp  singledocparser.h  (+7 more)
yaml_cpp_0_2_7/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
yaml_cpp_0_2_7/test/: CMakeLists.txt  emittertests.cpp  parsertests.cpp  spectests.cpp  tests.cpp
yaml_cpp_0_2_7/util/: CMakeLists.txt  parse.cpp
yaml_eigen_utilities/: CMakeLists.txt  README.md  package.xml
yaml_eigen_utilities/include/yaml_eigen_utilities/: binary_utilities.hpp  yaml_eigen_utilities.hpp
yaml_eigen_utilities/test/: test_yaml_eigen_utilities.cpp
yaml_utilities/: CMakeLists.txt  README.md  package.xml
yaml_utilities/include/yaml_utilities/: binary_utilities.hpp  yaml_utilities.hpp
yaml_utilities/src/: binary_utilities.cpp  yaml_utilities.cpp
yaml_utilities/test/: test_binary_utilities.cpp  test_yaml_utilities.cpp
