<?xml version="1.0"?>
<package>
  <name>realtime_utilities</name>
  <version>0.0.0</version>
  <description>The realtime_utilities package</description>
  <maintainer email="jreher@caltech.edu">Jenna Reher</maintainer>
  <maintainer email="eacousineau@gmail.com">Eric Cousineau</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    </export>
</package>
